--- a/macros.tex
+++ b/macros.tex
@@ -159,7 +159,7 @@
 \newcommand{\judth}[2]{\ensuremath{#1 \symjudh #2}}
 \newcommand{\judtm}[2]{\ensuremath{#1 \symjudm #2}}
 \newcommand{\judts}[2]{\ensuremath{#1 \symjuds #2}}
-\newcommand{\env}{\ensuremath{\symenv}}
+\newcommand{\env}{\ensuremath{\symenv}\xspace}
 \newcommand{\envempty}{\ensuremath{\symempty}}
 \newcommand{\envexte}[3]{\ensuremath{#1 \symext #2 \symhasty #3}}
 \newcommand{\envextt}[2]{\ensuremath{#1 \symext #2}}
